--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.amrhal.kotlintest">
-
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -18,7 +19,11 @@
         </activity>
         <activity
                 android:name=".CalculatorActivity"
-        android:theme="@style/AppThemeNoActioBar">
+                android:theme="@style/AppThemeNoActioBar">
+        </activity>
+        <activity
+                android:name=".fragmentTest.Main2Activity"
+                android:label="@string/title_activity_main2">
         </activity>
     </application>
 
